make sure we do not use 3.1 in the buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,7 +30,7 @@ develop =
     .
 
 [plone]
-recipe = plone.recipe.plone
+recipe = plone.recipe.plone<3.1dev
 
 [zope2]
 recipe = plone.recipe.zope2install
