reverted last change to buildout, no longer picky about plone version

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,7 +30,7 @@ develop =
     .
 
 [plone]
-recipe = plone.recipe.plone<3.1dev
+recipe = plone.recipe.plone
 
 [zope2]
 recipe = plone.recipe.zope2install
